--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Heimasíða fyrir veitingastað",
   "main": "index.js",
   "scripts": {
+    "start": "dotenv -e .env node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
