--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,12 @@ JWT_SECRET=
 PORT=3000
 CLOUDINARY_URL=
 TOKEN_LIFETIME=3600
+
+
+# Tests
+## Against which base url should the tests run
+BASE_URL=http://localhost:3000
+
+## Hardcoded admin test user, see note in tests readme
+ADMIN_USER=admin
+ADMIN_PASS=123456
