Notendur, vefþjónustur að mestu leiti klárar
Þarf að skoða aðeins betur með validation á  PATCH  /users/me. Eftir að klára test

--- a/.env.test
+++ b/.env.test
@@ -12,3 +12,6 @@ BASE_URL=http://localhost:3000
 ## Hardcoded admin test user, see note in tests readme
 ADMIN_USER=admin
 ADMIN_PASS=123456
+
+## unsafer password for tests
+BCRYPT_ROUNDS=12
