--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 DATABASE_URL=postgres://:@localhost/vef2-sse
 JWT_SECRET=
 PORT=3000
-CLOUDINARY_URL=
+CLOUDINARY_URL=cloudinary://793795597373899:wiyIzSSqAGAxiJViMffUQ2G0JZg@emh33
 TOKEN_LIFETIME=3600
 
 
