--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "url": "^0.11.0",
+    "uuid": "^8.3.2",
     "winston": "^3.6.0",
     "xss": "^1.0.10"
   },
