Breytti build í setup

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/app.js",
     "start": "dotenv -e .env node ./src/app.js",
-    "build": "dotenv -e .env node ./src/setup.js",
+    "setup": "dotenv -e .env node ./src/setup.js",
     "lint": "eslint ./src --fix",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' dotenv -e .env.test -- jest ./*.test.js",
     "test-watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
